--- a/apps/carnival-app/index.html
+++ b/apps/carnival-app/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>carnival-app</title>
+    <meta name="theme-color" content="#FF8C00" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Foca Carnaval" />
+    <title>Foca no Carnaval</title>
   </head>
   <body>
     <div id="root"></div>
